# grafana-mcp-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: cd-dev.yaml  cd-prod.yaml  ci.yaml
argocd/: app-dev.yaml  app-prod.yaml  applicationset.yaml  appproject.yaml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: chat.py  investigation.py  llm.py  mcp.py  skill.py
backend/app/routers/: auth.py  chat.py  grafana.py  health.py  investigations.py  mcp.py  queries.py  skills.py
backend/app/services/: auth_service.py  grafana_client.py  investigation_runner.py  llm_gateway.py  mcp_client.py  query_validator.py  skills_engine.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_mcp_client.py
docker/: docker-compose.yaml
docker/prometheus/: prometheus.yml
docker/promtail/: config.yaml
docs/: architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
helm/grafana-mcp-platform/: Chart.yaml  values-dev.yaml  values-perf.yaml  values-prod.yaml  values.yaml
k8s/: kyverno-policies.yaml
mcp-server/: Dockerfile
mcp-server/config/: mcp-config.yaml
scripts/: bootstrap.sh  local-setup.sh  rotate-secrets.sh
skills/templates/: alert-triage.md  capacity-planning.md  db-slow-query.md  health-check.md  k6-load-test.md  kubernetes-crashloop.md  latency-trace.md  log-analysis.md  service-dependency.md  (+1 more)
(+102 files in other folders)
